--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,8 +38,10 @@ application.langs="en"
 #
 # db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+db.default.user=postgres
+db.default.password=2253528
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/play_app"
 
 # Evolutions
 # ~~~~~
